--- a/services/auth-service/Dockerfile.dev
+++ b/services/auth-service/Dockerfile.dev
@@ -1,10 +1,11 @@
 # services/auth-service/Dockerfile.dev
 
-FROM golang:1.21-alpine
+FROM golang:1.23.4-alpine
 WORKDIR /app
 
 RUN apk add --no-cache git
 COPY . .
 
-RUN go install github.com/cosmtrek/air@latest
+RUN go install github.com/air-verse/air@latest
+
 CMD ["air"]
