--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,44 +7,46 @@ services:
     ports: ["5432:5432"]
     volumes: [pgdata:/var/lib/postgresql/data]
 
-  redis:
-    image: redis:7
-    ports: ["6379:6379"]
+  # redis:
+  #   image: redis:7
+  #   ports: ["6379:6379"]
 
   auth-service:
     build:
-      context: ./services/auth-service
-      dockerfile: Dockerfile.dev
+      context: .
+      dockerfile: services/auth-service/Dockerfile.dev
     ports: ["8001:8001"]
     volumes:
-      - ./services/auth-service:/app
-    env_file: .env.dev
+      - .:/app
+    environment:
+      APP_ENV: development
+      ENV_PATH: /app/.env.dev
     depends_on: [postgres]
 
-  web-ui:
-    build:
-      context: ./apps/web-ui
-      dockerfile: Dockerfile.dev
-    ports: ["3000:3000"]
-    volumes:
-      - ./apps/web-ui:/app
-    env_file: .env.dev
-    depends_on: [auth-service]
+  # web-ui:
+  #   build:
+  #     context: ./apps/web-ui
+  #     dockerfile: Dockerfile.dev
+  #   ports: ["3000:3000"]
+  #   volumes:
+  #     - ./apps/web-ui:/app
+  #   env_file: .env.dev
+  #   depends_on: [auth-service]
 
-  api-gateway:
-    build:
-      context: ./apps/api-gateway
-      dockerfile: Dockerfile.dev
-    ports:
-      - "3001:3001"
-    volumes:
-      - ./apps/api-gateway:/app
-      - /app/node_modules
-    env_file: .env.dev
-    depends_on:
-      - auth-service
-      - redis
-      - postgres
+  # api-gateway:
+  #   build:
+  #     context: ./apps/api-gateway
+  #     dockerfile: Dockerfile.dev
+  #   ports:
+  #     - "3001:3001"
+  #   volumes:
+  #     - ./apps/api-gateway:/app
+  #     - /app/node_modules
+  #   env_file: .env.dev
+  #   depends_on:
+  #     - auth-service
+  #     - redis
+  #     - postgres
 
 volumes:
   pgdata:
