--- a/services/auth-service/Dockerfile.dev
+++ b/services/auth-service/Dockerfile.dev
@@ -1,11 +1,16 @@
-# services/auth-service/Dockerfile.dev
+FROM golang:1.23.4
 
-FROM golang:1.23.4-alpine
 WORKDIR /app
 
-RUN apk add --no-cache git
+# Install Air
+RUN go install github.com/air-verse/air@latest
+
+# Copy entire repo context (to access go.work + libs + .env.dev)
 COPY . .
 
-RUN go install github.com/air-verse/air@latest
+WORKDIR /app/services/auth-service
+
+# Download deps
+RUN go mod tidy
 
 CMD ["air"]
