--- a/services/auth-service/Dockerfile.dev
+++ b/services/auth-service/Dockerfile.dev
@@ -14,4 +14,6 @@ WORKDIR /app/services/auth-service
 RUN go mod tidy
 
 # Run Air with build cmd that specifies the binary location
-CMD ["air", "-build.cmd", "go build -o /tmp/auth-service-main", "-build.bin", "/tmp/auth-service-main", "-build.log", "/tmp/auth-service-errors.log"]
+CMD ["air", "-c", ".air.toml"]
+
+# CMD ["air", "-build.cmd", "go build -o /tmp/auth-service-main", "-build.bin", "/tmp/auth-service-main", "-build.log", "/tmp/auth-service-errors.log"]
