--- a/apps/api-gateway/Dockerfile.dev
+++ b/apps/api-gateway/Dockerfile.dev
@@ -1,10 +1,14 @@
 FROM node:18-alpine
+
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+
+# Install nodemon globally for dev
+RUN npm install && npm install -g nodemon
 
 COPY . .
+
 EXPOSE 3001
 
-CMD ["npm", "run", "dev"]
+CMD ["nodemon", "--legacy-watch", "src/index.ts"]
