--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,9 +7,9 @@ services:
     ports: ["5432:5432"]
     volumes: [pgdata:/var/lib/postgresql/data]
 
-  # redis:
-  #   image: redis:7
-  #   ports: ["6379:6379"]
+  redis:
+    image: redis:7
+    ports: ["6379:6379"]
 
   auth-service:
     build:
@@ -17,7 +17,7 @@ services:
       dockerfile: services/auth-service/Dockerfile.dev
     ports: ["8001:8001"]
     volumes:
-      - .:/app
+      - .:/app:cached
     environment:
       APP_ENV: development
       ENV_PATH: /app/.env.dev
@@ -33,20 +33,20 @@ services:
   #   env_file: .env.dev
   #   depends_on: [auth-service]
 
-  # api-gateway:
-  #   build:
-  #     context: ./apps/api-gateway
-  #     dockerfile: Dockerfile.dev
-  #   ports:
-  #     - "3001:3001"
-  #   volumes:
-  #     - ./apps/api-gateway:/app
-  #     - /app/node_modules
-  #   env_file: .env.dev
-  #   depends_on:
-  #     - auth-service
-  #     - redis
-  #     - postgres
+  api-gateway:
+    build:
+      context: ./apps/api-gateway
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3001:3001"
+    volumes:
+      - ./apps/api-gateway:/app
+      - /app/node_modules
+    env_file: .env.dev
+    depends_on:
+      - auth-service
+      - redis
+      - postgres
 
 volumes:
   pgdata:
