--- a/apps/web-ui/Dockerfile.dev
+++ b/apps/web-ui/Dockerfile.dev
@@ -1,8 +1,12 @@
-# apps/web-ui/Dockerfile.dev
+# Dockerfile.dev
 
-FROM node:18-alpine
+FROM node:22.14.0
+
 WORKDIR /app
-COPY . .
+
+COPY package.json package-lock.json ./
 RUN npm install
-EXPOSE 3000
+
+COPY . .
+
 CMD ["npm", "run", "dev"]
