--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,16 +1,23 @@
 version: '3.9'
 
 services:
+  # ─────────────────────────────────────────────────────
+  # Your databases
   postgres:
     image: postgres:15
-    env_file: .env.dev
+    env_file: .env.dev                    # loads POSTGRES_USER, PASSWORD, etc.
     ports: ["5432:5432"]
-    volumes: [pgdata:/var/lib/postgresql/data]
+    volumes:
+      - ./infra/db/init-postgres.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
 
   redis:
     image: redis:7
-    ports: ["6379:6379"]
+    ports:
+      - "6379:6379"
 
+  # ─────────────────────────────────────────────────────
+  # Identity Service (auth + user)
   auth-service:
     build:
       context: .
@@ -18,21 +25,32 @@ services:
     ports: ["8001:8001"]
     volumes:
       - .:/app:cached
+    env_file:
+      - .env.dev
     environment:
       APP_ENV: development
       ENV_PATH: /app/.env.dev
+      SERVICE_NAME: identity    # used by your connect.go
+      DB_TYPE: postgres
     depends_on: [postgres]
 
-  # web-ui:
-  #   build:
-  #     context: ./apps/web-ui
-  #     dockerfile: Dockerfile.dev
-  #   ports: ["3000:3000"]
-  #   volumes:
-  #     - ./apps/web-ui:/app
-  #   env_file: .env.dev
-  #   depends_on: [auth-service]
+  web-ui:
+    build:
+      context: ./apps/web-ui
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./apps/web-ui:/app
+      - /app/node_modules  # Prevents node_modules from being overwritten
+    env_file:
+      - .env.dev
+    depends_on:
+      - auth-service
 
+
+  # ─────────────────────────────────────────────────────
+  # API Gateway Service
   api-gateway:
     build:
       context: ./apps/api-gateway
@@ -47,6 +65,15 @@ services:
       - auth-service
       - redis
       - postgres
+  # ─────────────────────────────────────────────────────
+  # Mongo for ratings
+  mongo:
+    image: mongo:6
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodata:/data/db
 
 volumes:
   pgdata:
+  mongodata:
